# Cereka

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  release.sh
.claude/skills/add-op/: SKILL.md
.claude/skills/no-buzzwords/: SKILL.md
.claude/skills/phase-status/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/snapshot/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/try-crka/: SKILL.md
cmake/toolchains/: ucrt64.cmake
include/Cereka/: Cereka.hpp  exceptions.hpp
include/VNEngine/: VNEngine.hpp
launcher/: CMakeLists.txt  config.cpp  config.hpp  main.cpp  project_manager.cpp  project_manager.hpp  templates.hpp  theme.hpp
launcher/template_assets/: generate.py
runner/: CMakeLists.txt  main.cpp
scripts/: build_all.sh  compiler.lua
src/: CMakeLists.txt  Cereka.cpp  VNEngine.cpp  audio.cpp  audio_manager.cpp  audio_manager.hpp  compiler_lua_embed.hpp.in  dialogue_system.cpp  dialogue_system.hpp  draw.cpp  engine_impl.hpp  menu_system.cpp  menu_system.hpp  save.cpp  save_data.hpp  scene_manager.cpp  scene_manager.hpp  script_interpreter.cpp  script_interpreter.hpp  script_vm.cpp  text_renderer.cpp  text_renderer.hpp  ui_config.cpp  ui_config.hpp  video.cpp  video.hpp  vn_instruction.cpp  vn_instruction.hpp
src/compiler/: embed_lua.cmake  vn_instruction.cpp  vn_instruction.hpp
src/config/: config_manager.cpp  config_manager.hpp  property_handlers.cpp  property_types.hpp
src/state/: cereka_state.hpp  cereka_states.cpp  cereka_states.hpp
tests/: CMakeLists.txt  config_test.cpp  main.cpp  save_data_test.cpp
tests/compile/: harness.lua
tests/compile/expected/: audio.txt  basic.txt  comments.txt  flow.txt  menu.txt  save_load.txt  ui_theme.txt  variables.txt
tests/compile/inputs/: audio.crka  basic.crka  comments.crka  flow.crka  menu.crka  save_load.crka  ui_theme.crka  variables.crka
