set(IMGUI_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../vendor/imgui")

set(IMGUI_SOURCES
    ${IMGUI_DIR}/imgui.cpp
    ${IMGUI_DIR}/imgui_draw.cpp
    ${IMGUI_DIR}/imgui_tables.cpp
    ${IMGUI_DIR}/imgui_widgets.cpp
    ${IMGUI_DIR}/backends/imgui_impl_sdl3.cpp
    ${IMGUI_DIR}/backends/imgui_impl_sdlrenderer3.cpp
)

# ---------------------------------------------------------------------------
# Embed template assets as C arrays using pure CMake (no xxd / Python needed)
# ---------------------------------------------------------------------------
set(ASSETS_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/template_assets)
set(EMBED_HEADER ${CMAKE_CURRENT_BINARY_DIR}/embedded_assets.h)

function(embed_file VAR_NAME FILE_PATH OUT_VAR)
    file(READ ${FILE_PATH} hex HEX)
    string(LENGTH "${hex}" hex_len)
    math(EXPR byte_len "${hex_len} / 2")
    # Insert "0x" prefix and ", " separator every 2 hex chars
    string(REGEX REPLACE "([0-9a-fA-F][0-9a-fA-F])" "0x\\1, " arr "${hex}")
    set(${OUT_VAR}
        "static const unsigned char ${VAR_NAME}[] = { ${arr}};\nstatic const unsigned int  ${VAR_NAME}_len = ${byte_len}u;\n"
        PARENT_SCOPE)
endfunction()

embed_file(kBgPng        ${ASSETS_DIR}/placeholder_bg.png      EMBED_BG)
embed_file(kCharPng      ${ASSETS_DIR}/placeholder_char.png    EMBED_CHAR)
embed_file(kSfxWav       ${ASSETS_DIR}/placeholder_sfx.wav     EMBED_SFX)
embed_file(kBgmWav       ${ASSETS_DIR}/placeholder_bgm.wav     EMBED_BGM)
embed_file(kMontserratTtf ${ASSETS_DIR}/Montserrat-Medium.ttf  EMBED_FONT)

file(WRITE ${EMBED_HEADER}
    "// Auto-generated by launcher/CMakeLists.txt — do not edit\n"
    "#pragma once\n\n"
    "${EMBED_BG}\n"
    "${EMBED_CHAR}\n"
    "${EMBED_SFX}\n"
    "${EMBED_BGM}\n"
    "${EMBED_FONT}\n"
)

# ---------------------------------------------------------------------------
# CerekaLauncher target
# ---------------------------------------------------------------------------
add_executable(CerekaLauncher main.cpp ${IMGUI_SOURCES})

target_include_directories(CerekaLauncher PRIVATE
    ${IMGUI_DIR}
    ${IMGUI_DIR}/backends
    ${CMAKE_CURRENT_SOURCE_DIR}/../vendor/SDL/include
    ${CMAKE_BINARY_DIR}/../vendor/SDL/include-revision
    ${CMAKE_CURRENT_BINARY_DIR}   # for embedded_assets.h
)

target_link_libraries(CerekaLauncher PRIVATE SDL3::SDL3)

target_compile_features(CerekaLauncher PRIVATE cxx_std_17)

set_target_properties(CerekaLauncher PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
)
